Fix scrollbars being invisible on non-hover.
Why is this even a thing?!

--- a/sass/overrides.scss
+++ b/sass/overrides.scss
@@ -17,3 +17,8 @@
 article img {
 	border-radius: 3px;
 }
+
+pre code {
+	scrollbar-width: initial !important;
+	scrollbar-color: #e9ecef transparent !important;
+}
